# stm32-emulator

./: Cargo.toml  README.md  asm.py  build.rs
example/: config.yaml
monox/: README.md  config.yaml
saturn/: config.yaml
src/: config.rs  emulator.rs  main.rs  sdl.rs  system.rs  util.rs
src/devices/: mod.rs  spi_flash.rs
src/ext_devices/: display.rs  lcd.rs  mod.rs  spi_flash.rs  touchscreen.rs  usart_probe.rs
src/framebuffers/: image.rs  mod.rs  sdl.rs  sdl_engine.rs
src/peripherals/: dma.rs  fsmc.rs  gpio.rs  i2c.rs  mod.rs  nvic.rs  rcc.rs  scb.rs  spi.rs  sw_spi.rs  systick.rs  usart.rs
