[package]
name = "stm32-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicorn-engine = "2.0.0-rc3"
clap = { version = "3.1", features = ["derive"] }
clap-num = "1"
anyhow = "1"
bytes = "1"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

svd-parser = "0.13"

env_logger = "0.9"
log = "0.4"

lazy_static = "1.4"
termcolor = "1.1"
num_enum = "0.5"

capstone = "0.11"
png = "0.17"

regex = "1"

sdl2 = {version="0.35", features=["bundled"]}

#[patch.crates-io]
#unicorn-engine = { path = "unicorn" }
